--- a/packages/ui-react-antd/styles/data-collection/data-collection-list.less
+++ b/packages/ui-react-antd/styles/data-collection/data-collection-list.less
@@ -12,6 +12,7 @@
         flex-shrink: 0;
         flex-grow: 0;
         display: flex;
+        align-items: flex-start;
         margin-bottom: 1em;
 
         .advanced-search-filterer {
